third_party/rust/cxx/v1/crate/tests/ui/root_namespace.stderr
error: expected expression, found `]`
 --> $DIR/root_namespace.rs:9:19
  |
9 |     #[namespace = ]
  |                   ^ expected expression
